# demo-arrow-flight

./: README.md  pyproject.toml
docs/: README.md
docs/notebooks/: demo_walkthrough.ipynb
docs/notebooks/artifacts/: benchmark_demo.csv  benchmark_demo_overhead.csv  benchmark_scaling.csv  pipeline_io_repeated_scaling.csv  pipeline_io_scaling.csv
examples/alpine_benchmark/: 01_server.sbatch  02_benchmark_client.sbatch  03_master_benchmark.sbatch  README.md  load_uv_env.sh  submit_benchmark.sh  submit_master.sh
examples/slurm/: 01_server.sbatch  02_sender.sbatch  03_receiver.sbatch  04_pipeline_produce.sbatch  05_pipeline_transform.sbatch  06_pipeline_consume.sbatch  07_benchmark.sbatch  README.md  submit_demo.sh  submit_pipeline.sh
src/demo_arrow_flight/: __init__.py  benchmarking.py  cli.py  flight_pipeline_demo.py  flight_server.py  ome_image.py  parquet_stream_demo.py  slurm_simulation.py  transfer.py
tests/: test_benchmarking.py  test_cli.py  test_ome_image.py  test_parquet_stream_demo.py  test_pipeline_demo.py  test_slurm_simulation.py  test_transfer.py
